add_subdirectory(common)
add_subdirectory(io-redirector)
add_subdirectory(ordered_semaphore)
add_subdirectory(cci_param_restricted)
add_subdirectory(apb_pin_level)
add_subdirectory(ahb_pin_level)
add_subdirectory(axi4_pin_level)
add_subdirectory(ace_pin_level)
add_subdirectory(configuration)
add_subdirectory(configurer)
add_subdirectory(sc_fixed_tracing)
add_subdirectory(cxs_tlm)
add_subdirectory(tlm_memory)
add_subdirectory(memory_subsys)
add_subdirectory(quantum_keeper_mt)
add_subdirectory(sim_speed)
add_subdirectory(streambuf)
if(FULL_TEST_SUITE)
	add_subdirectory(sim_performance)
endif()
