[metadata]
name = PySysC_SCC
version = 0.0.1
author = 'MINRES Technologies GmbH'
author_email = info@minres.com
description = SCC python modules for intergration in PySysC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Minres/SystemC-Components.git
project_urls =
    Bug Tracker = https://github.com/Minres/SystemC-Components.git/issues
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

